# roulingo

./: README.md  pyproject.toml
data/: tiny.lp
data/csv/: arcs.csv  availabilities.csv  demands.csv  months.csv  nodes.csv  vehicles.csv
instances/: tiny-1-dup-1-inc-07-07.lp  tiny-1-dup-1-inc-08-08.lp  tiny-1-dup-1-inc-09-09.lp  tiny-1-dup-1-inc-10-10.lp  tiny-1-dup-1-inc-11-11.lp  tiny-1-dup-1-inc-12-12.lp  tiny-1-dup-2-inc-07-08.lp  tiny-1-dup-2-inc-08-09.lp  tiny-1-dup-2-inc-09-10.lp  tiny-1-dup-2-inc-10-11.lp  tiny-1-dup-2-inc-11-12.lp  tiny-1-dup-3-inc-07-09.lp  tiny-1-dup-3-inc-08-10.lp  tiny-1-dup-3-inc-09-11.lp  tiny-1-dup-3-inc-10-12.lp  tiny-1-dup-4-inc-07-10.lp  tiny-1-dup-4-inc-08-11.lp  tiny-1-dup-4-inc-09-12.lp  tiny-1-dup-5-inc-07-11.lp  tiny-1-dup-5-inc-08-12.lp  tiny-1-dup-6-inc-07-12.lp  tiny-2-dup-1-inc-07-07.lp  tiny-2-dup-1-inc-08-08.lp  tiny-2-dup-1-inc-09-09.lp  tiny-2-dup-1-inc-10-10.lp  tiny-2-dup-1-inc-11-11.lp  tiny-2-dup-1-inc-12-12.lp  tiny-2-dup-2-inc-07-08.lp  tiny-2-dup-2-inc-08-09.lp  tiny-2-dup-2-inc-09-10.lp  tiny-2-dup-2-inc-10-11.lp  tiny-2-dup-2-inc-11-12.lp  tiny-2-dup-3-inc-07-09.lp  tiny-2-dup-3-inc-08-10.lp  tiny-2-dup-3-inc-09-11.lp  tiny-2-dup-3-inc-10-12.lp  tiny-2-dup-4-inc-07-10.lp  tiny-2-dup-4-inc-08-11.lp  tiny-2-dup-4-inc-09-12.lp  tiny-2-dup-5-inc-07-11.lp  (+23 more)
src/roulingo/: __init__.py
src/roulingo/conversion/: __init__.py  convert.py
src/roulingo/processing/: __init__.py  process.py
src/roulingo/processing/encodings/: config.lp  preprocess.lp
src/roulingo/solving/: __init__.py  solve.py
(+7 files in other folders)
